--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,19 @@
 <resources>
     <string name="app_name">Actividad_04_PMDM</string>
+    <string name="TxtHombre">HOMBRE</string>
+    <string name="txtMujer">MUJER</string>
+
+    <string name="txtAltura">ALTURA</string>
+    <string name="TipoAltura">cm</string>
+    <string name="ValAltura">120</string>
+
+    <string name="txtPeso">PESO</string>
+    <string name="ValPeso">60</string>
+    <string name="BtnMenos1">-</string>
+    <string name="BtnMas1">+</string>
+
+    <string name="txtEdad">PESO</string>
+    <string name="ValEdad">60</string>
+    <string name="BtnMenos2">-</string>
+    <string name="BtnMas2">+</string>
 </resources>
