--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,5 +26,12 @@
     <string name="Calc2">Calculadora2</string>
     <string name="Calc3">Calculadora3</string>
     <string name="imc">IMC</string>
+    <string name="salir">TERMINAR</string>
+
+
+    STRINGS CALCULADORA ADRI
+
+
+
 
 </resources>
